; ModuleID = '/home/carl/AnghaBench/h2o/deps/hiredis/extr_async.c_redisAsyncConnectBindWithReuse.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/hiredis/extr_async.c_redisAsyncConnectBindWithReuse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @redisAsyncConnectBindWithReuse(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32* @redisConnectBindNonBlockWithReuse(i8* %9, i32 %10, i8* %11)
  store i32* %12, i32** %7, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i32* @redisAsyncInitialize(i32* %13)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @__redisAsyncCopyError(i32* %15)
  %17 = load i32*, i32** %8, align 8
  ret i32* %17
}

declare dso_local i32* @redisConnectBindNonBlockWithReuse(i8*, i32, i8*) #1

declare dso_local i32* @redisAsyncInitialize(i32*) #1

declare dso_local i32 @__redisAsyncCopyError(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
